--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -33,6 +33,7 @@
     "leaflet-map": "0.2.1",
     "material-icons": "0.6.3",
     "ng2-dragula": "2.1.1",
+    "ngx-dropzone": "^3.1.0",
     "ngx-pagination": "5.1.1",
     "ngx-perfect-scrollbar": "10.1.1",
     "ngx-quill": "14.0.0",
