--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -30,6 +30,9 @@
     "angular-calendar": "0.29.0",
     "angular-in-memory-web-api": "0.11.0",
     "date-fns": "2.25.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "leaflet-map": "0.2.1",
     "material-icons": "0.6.3",
     "ng2-dragula": "2.1.1",
