--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "pbuild": "ng build --aot --base-href / --output-path=../publishUI"
   },
   "private": true,
   "dependencies": {
