--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,6 +12,8 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/angular": "^31.1.1",
+    "@ag-grid-community/core": "^31.1.1",
     "@agm/core": "1.1.0",
     "@angular/animations": "14.0.2",
     "@angular/cdk": "14.0.2",
@@ -26,11 +28,13 @@
     "@angular/router": "14.0.2",
     "@swimlane/ngx-charts": "^20.1.2",
     "@swimlane/ngx-datatable": "20.0.0",
-    "ag-grid-angular": "^28.2.1",
-    "ag-grid-community": "^28.2.1",
+    "ag-grid-angular": "^31.1.1",
+    "ag-grid-community": "^31.1.1",
     "angular-calendar": "0.29.0",
     "angular-in-memory-web-api": "0.11.0",
     "date-fns": "2.25.0",
+    "jspdf": "^3.0.0",
+    "jspdf-autotable": "^5.0.2",
     "leaflet-map": "0.2.1",
     "material-icons": "0.6.3",
     "ng2-dragula": "2.1.1",
@@ -38,6 +42,7 @@
     "ngx-pagination": "5.1.1",
     "ngx-perfect-scrollbar": "10.1.1",
     "ngx-quill": "14.0.0",
+    "papaparse": "^5.5.2",
     "quill": "1.3.7",
     "roboto-fontface": "0.10.0",
     "rxjs": "7.5.5",
